--- a/htdocs/main.css
+++ b/htdocs/main.css
@@ -33,7 +33,6 @@ html, body {
 #page {
     min-height: 100vh;
     position: relative;
-    padding-top: 50px;
 }
 
 
